<resources>
    <string name="app_name">HotnCold</string>

    <string name="hello_world">Hello world!</string>
    <string name="map_string">Map</string>
    <string name="my_profile_string">My Profile</string>
    <string name="switch_mode_string">Switch Mode</string>
    <string name="filters_string">Filters</string>
    <string name="groups_string">Groups</string>
    <string name="settings_string">Settings</string>
    <string name="search_string">Search</string>
    <string name="logout_string">Log out</string>

    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>
    <string name="google_places_api_key">AIzaSyC5mTsDhjayzCqXH87ggEYsfswR1cStfX8</string>
    <string name="camera">Camera</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_camera_view">CameraViewActivity</string>
    <string name="menu_settings">Settings</string>

    <string name="app_id_fb">1681495948781803</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
</resources>
